adding cdi setup